Fix menu button on tablets

--- a/themes/vue/source/css/_sidebar.styl
+++ b/themes/vue/source/css/_sidebar.styl
@@ -58,7 +58,7 @@
         display none
         padding-left 0
 
-@media screen and (max-width: 720px)
+@media screen and (max-width: 900px)
     .sidebar
         position fixed
         z-index 8
